# ComfyUI-noEmbryo

./: .gitignore  LICENSE  README.md  __init__.py  nodes.py  pyproject.toml  regex_text_chopper.py  resolution_scale.py  terms_node.py
.github/workflows/: publish.yml
Example/: PromptTermList test.json  TermList1.json  TermList2.json  TermList3.json
TermLists/: .gitignore  TermList3.json
