[project]
name = "comfyui-noembryo"
description = "PromptTermList (1-6): are some nodes that help with the creation of Prompts inside ComfyUI. Resolution Scale outputs image dimensions using a scale factor. Regex Text Chopper outputs the chopped parts of a text using RegEx."
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/noembryo/ComfyUI-noEmbryo"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-noEmbryo"
Icon = ""
