[project]
name = "comfyui-noembryo"
description = """
A collection of nodes for ComyUI.
* "PromptTermList (1-6)" nodes to help with the creation of Prompts.
* "Resolution Scale" is a node that resizes an image using pixels or scale factor.
* "Regex Text Chopper" is a node that cuts text based on regex."""
version = "0.8.0.0"
license = "MIT"

[project.urls]
Repository = "https://github.com/noembryo/ComfyUI-noEmbryo"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "noembryo"
DisplayName = "ComfyUI-noEmbryo"
Icon = ""
